@@ -265,11 +265,6 @@ Mojolicious::Routes - Always find your destination with routes
   $r->bridge->to(controller => 'foo', action =>'auth')
     ->route('/blog')->to(action => 'list');
 
-  # Waypoints are similar to bridges and nested routes but can also match
-  # if they are not the actual endpoint of the whole route
-  my $b = $r->waypoint('/books')->to(controller => 'books', action => 'list');
-  $b->route('/:id', id => qr/\d+/)->to(action => 'view');
-
   # Simplified Mojolicious::Lite style route generation is also possible
   $r->get('/')->to(controller => 'blog', action => 'welcome');
   my $blog = $r->under('/blog');
